Fix vignette typo

--- a/vignettes/manifestoRworkflow.Rmd
+++ b/vignettes/manifestoRworkflow.Rmd
@@ -15,7 +15,7 @@ Contents:
 First of all, load the `manifestoR` package:
 
 ```
-library(manifestor)
+library(manifestoR)
 ```
 
 ```{r eval=TRUE, include=FALSE, echo=TRUE}
